--- a/WindowsFormsApp1/WindowsFormsApp1.csproj
+++ b/WindowsFormsApp1/WindowsFormsApp1.csproj
@@ -60,6 +60,7 @@
     <Compile Include="MenuStartBox.Designer.cs">
       <DependentUpon>MenuStartBox.cs</DependentUpon>
     </Compile>
+    <Compile Include="MulitplayerClient.cs" />
     <Compile Include="Multiplayer.cs" />
     <Compile Include="MultiplayerForm.cs">
       <SubType>Form</SubType>
